# WikiClean

./: LICENSE  README.md  pyproject.toml
src/wikiclean/: __init__.py  api.py  cleaner.py  cli.py  fetch.py  filters.py  image_urls.py  images.py  infobox.py  input.py  metadata.py  output.py  parser.py  search.py  server.py  tables.py  web.py
tests/: test_api.py  test_cleaner.py  test_cli.py  test_features.py  test_fetch.py  test_image_urls.py  test_images.py  test_infobox.py  test_parser.py  test_search.py  test_server.py  test_tables.py  test_web.py
