[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wikiclean"
version = "0.1.0"
description = "Fetch, clean, structure, and filter Wikipedia articles."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31"
]

[project.scripts]
wikiclean = "wikiclean.cli:main"

[tool.setuptools.packages.find]
where = ["src"]